# puranemone.com

./: .gitignore  Makefile  compose.override.yaml  compose.yaml  memo.md  setup.sql
.devcontainer/: devcontainer.json
backend/: Cargo.toml  Dockerfile  cookie.txt  tmp
backend/.sqlx/: query-274100101f7c03da1d58240d3bc9b15024b7b9cb846fe99381d53311294f5d6f.json  query-355c9c5a6a102e07fc394e375df394610d007d8cb9dc0ad56916eeb3b572c5f2.json  query-a2a7ffe790f02fa55566cf0e00022a47c0fce9a30b19c8ab0ae08c7bc5665057.json  query-bd8229368416d90f3cd7b60eba828c5364fadd45b4244c9e653f79705585afd9.json
backend/docs/: API_SPEC.md  DESIGN.md
backend/src/: error.rs  extractors.rs  handlers.rs  lib.rs  main.rs  main.rs.bak
backend/src/handlers/: calligraphy.rs
backend/src/models/: calligraphy.rs
backend/src/repositories/: db_repository.rs
backend/src/services/: calligraphy.rs
backend/tests/: api_test.rs
frontend/: ARCHITECTURE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/BlogModal/: BlogModal.css  index.tsx
frontend/src/config/: queryClient.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: useCalligraphy.ts  useErrorHandler.ts  useModalEffects.ts  useModalState.ts
frontend/src/lib/: api.ts  hooks.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: calligraphy.ts
frontend/src/utils/: calligraphy.ts  className.ts  errorHandler.ts  formatters.ts
sql/: create_test_data.sql  insert.sql
(+22 files in other folders)
