[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Web Server backend"
license = "MIT"

[dependencies]
# 非同期処理
tokio = { version = "1.0", features = ["full"] }
# データシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Web App
axum = "0.7"
# 構造化ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# DB
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres"] }