[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Web Server backend"
license = "MIT"

[dependencies]
# 非同期処理
tokio = { version = "1.0", features = ["full"] }
# データシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Web App
axum = "0.7"
# 構造化ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
time = { version = "0.3.44", features = ["serde-human-readable", "macros", "formatting", "parsing"] }
thiserror = "2.0.17"
tower-cookies = "0.11.0"
async-trait = "0.1.89"
moka = { version = "0.12.12", features = ["future"] }

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
# for the test
mockall = "0.14.0"
tower = "0.5.2"
